# adventOfCode

./: .gitignore  flake.nix  shell.nix
2017/: 1-2.cpp  1.cpp  2.cpp  Makefile
2020/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  main.cpp  main.hpp  meson.build  position.hpp  shared.hpp
2020/test/: input10  input11  input12  input13  input14  input3  input5  input9
2023/: Cargo.toml
2023/01/: main.rs
2023/01-2/: main.rs
2023/02/: input  main.rs
2023/02-2/: main.rs
2023/03/: main.rs
2023/03-2/: main.rs
